--- a/.github/workflows/generate-data.yml
+++ b/.github/workflows/generate-data.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install beautifulsoup4
+        pip install -r requirements.txt
       working-directory: ${{ env.workpath }}
     
     - name: Checkout
